Bug 409861 - Plasma shows a notification "Copying (Finished)" when I add a shortcut to desktop
Summary: Plasma shows a notification "Copying (Finished)" when I add a shortcut to des...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (show other bugs)
Version: 5.16.3
Platform: Archlinux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-16 15:13 UTC by Patrick Silva
Modified: 2021-01-19 16:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.21


Attachments
screenshot (52.66 KB, image/png)
2019-07-16 15:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-07-16 15:13:05 UTC
Created attachment 121553 [details]
screenshot

SUMMARY
I can't reporoduce this behavior consistently, it occurs randomly.
Sometimes Plasma shows a notification "Copying (Finished)" after I add a shortcut to desktop via kicker launcher.

STEPS TO REPRODUCE
1. use kicker as your apps launcher
2. search for some app using kicker
3. right click on any search result, select "Add to desktop"

OBSERVED RESULT
Sometimes Plasma shows a notification "Copying (Finished)".
See the attached screenshot.

EXPECTED RESULT
plasma shows no notification

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.16.3
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Comment 1 Bug Janitor Service 2021-01-17 22:58:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/303
Comment 2 Nicolas Fella 2021-01-18 01:12:47 UTC
Git commit 4780e2e5c2c3138bac20e86b5ab610469f9a018e by Nicolas Fella.
Committed on 18/01/2021 at 01:11.
Pushed by nicolasfella into branch 'master'.

Hide progressinfo when linking application to desktop

Technically this is a file operation and thus can appear in the
jobtracker. This however is a pure implementation detail and should not
be exposed to the user.

M  +1    -1    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/4780e2e5c2c3138bac20e86b5ab610469f9a018e