Hide progressinfo when linking application to desktop

Technically this is a file operation and thus can appear in the
jobtracker. This however is a pure implementation detail and should not
be exposed to the user.

BUG: 409861